# juliaos

./: .gitignore  .health-fix  DEPLOYMENT.md  LICENSE  Project.toml  README.md  health-endpoints-fix.txt  health-router-fix.txt  health-router-pattern.txt  julia_os_adeptdao.code-workspace  oxygen-router-fix.txt  render.yaml  run_tests.jl  start-adeptdao.ps1  start_juliaos.sh  tatus  test_julia.jl
app-server/: env.example  leverage_integration.py  main.py  requirements.txt
app-server/tests/: test_main.py
frontend/: .env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AIChatInterface.tsx  Dashboard.tsx  Header.tsx  ProposalAnalysis.tsx  WalletProvider.tsx
frontend/components/monitoring/: AlertsView.tsx  HealthStatus.tsx  MetricsChart.tsx  MonitoringDashboard.tsx  TracingView.tsx
juliaos-core/.devcontainer/: devcontainer.json
juliaos-core/julia/: Dockerfile  Project.toml  lazy_deps.toml  test_startup.jl  upgrade_oxygen.jl
juliaos-core/julia/config/: alerts.toml
juliaos-core/julia/src/: JuliaOS.jl  server.jl
juliaos-core/python/: pyproject.toml
juliaos-core/workflows/: ci.yml
leverage/: README_STANDALONE_LEVERAGE.md  __init__.py  example_usage.py  pyproject.toml  setup.py  universal_leverage_system_core.py
leverage/enhanced_leverage_system/: leverage_integration_helper.py
leverage/juliaos/: __init__.py  leverage_induction.py  leverage_integration_helper.py  universal_leverage_system_core.py
leverage/juliaos/leverage/: __init__.py
(+51 files in other folders)
